--- a/src/components/breadcrumb/breadcrumb.css
+++ b/src/components/breadcrumb/breadcrumb.css
@@ -9,15 +9,16 @@
 
   font-family: var(--breadcrumb-font-regular);
   line-height: 1.5;
-  color: #000;
+  color: var(--leu-color-black-100);
 }
 
 :host([inverted]) {
-  color: #fff;
+  color: var(--leu-color-black-0);
 }
 
-ol {
+.breadcrumbs__list {
   display: flex;
+  align-items: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -25,23 +26,23 @@ ol {
   /* overflow: hidden; */
 }
 
-li,
-span {
+.breadcrumbs__item,
+.breadcrumbs__icon {
   align-items: center;
   display: flex;
   min-height: 1.875rem;
   white-space: nowrap;
 }
 
-a {
+.breadcrumbs__item:first-child {
+  font-family: var(--breadcrumb-font-black);
+}
+
+.breadcrumbs__link {
   color: inherit;
   text-decoration: none;
   transition: color 0.1s ease;
   white-space: nowrap;
-}
-
-li:first-child {
-  font-family: var(--breadcrumb-font-black);
 }
 
 .menu {
@@ -63,7 +64,7 @@ li:first-child {
 
 .dropdown-content {
   position: absolute;
-  background-color: #fff;
+  background-color: var(--leu-color-black-0);
   min-width: 160px;
   overflow: visible;
   box-shadow: var(--leu-box-shadow-short);
@@ -81,30 +82,30 @@ li:first-child {
   width: 1px;
 }
 
-.fontsize {
-  font-size: 16px;
+.breadcrumbs {
+  font-size: 1rem;
 }
 
 @media (width >= 320px) {
-  .fontsize {
+  .breadcrumbs {
     font-size: calc(2.5vw + 8px);
   }
 }
 
 @media (width >= 400px) {
-  .fontsize {
+  .breadcrumbs {
     font-size: 18px;
   }
 }
 
 @media (width >= 1024px) {
-  .fontsize {
+  .breadcrumbs {
     font-size: calc(0.7813vw + 10px);
   }
 }
 
 @media (width >= 1280px) {
-  .fontsize {
+  .breadcrumbs {
     font-size: 20px;
   }
 }
