--- a/src/components/breadcrumb/breadcrumb.css
+++ b/src/components/breadcrumb/breadcrumb.css
@@ -9,56 +9,52 @@
 
   font-family: var(--breadcrumb-font-regular);
   line-height: 1.5;
-  color: #000;
+  color: var(--leu-color-black-100);
 }
 
 :host([inverted]) {
-  color: #fff;
+  color: var(--leu-color-black-0);
 }
 
-ol {
+.breadcrumbs__list {
   display: flex;
+  align-items: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-ol.hidden {
-  opacity: 0;
-  height: 0;
+.breadcrumbs--back-only .breadcrumbs__list {
   overflow: hidden;
 }
 
-li, span {
+.breadcrumbs__item,
+.breadcrumbs__icon {
   align-items: center;
   display: flex;
   min-height: 1.875rem;
   white-space: nowrap;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-  transition: color .1s ease;
-  white-space: nowrap;
-}
-
-li:first-child {
+.breadcrumbs__item:first-child:not(.breadcrumbs__item--back) {
   font-family: var(--breadcrumb-font-black);
 }
 
-li.hidden {
-  display: none !important;
+.breadcrumbs__item--back {
+  max-width: 100%;
 }
 
-/* add space from arrows */
-ol.hidden li {
-  padding-left: 24px;
+.breadcrumbs__link {
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.1s ease;
+  white-space: nowrap;
 }
 
-/* add space from ... */
-ol.hidden li:first-child {
-  padding-right: 24px;
+.breadcrumbs__item--back .breadcrumbs__link {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-right: 0.25rem;
 }
 
 .menu {
@@ -79,17 +75,12 @@ ol.hidden li:first-child {
 }
 
 .dropdown-content {
-  display: none;
   position: absolute;
-  background-color: #fff;
+  background-color: var(--leu-color-black-0);
   min-width: 160px;
   overflow: visible;
   box-shadow: var(--leu-box-shadow-short);
   z-index: 1;
-}
-
-.show {
-  display: block;
 }
 
 .visuallyhidden {
@@ -103,30 +94,30 @@ ol.hidden li:first-child {
   width: 1px;
 }
 
-.fontsize {
-  font-size: 16px;
+.breadcrumbs {
+  font-size: 1rem;
 }
 
 @media (width >= 320px) {
-  .fontsize {
+  .breadcrumbs {
     font-size: calc(2.5vw + 8px);
   }
 }
 
 @media (width >= 400px) {
-  .fontsize {
+  .breadcrumbs {
     font-size: 18px;
   }
 }
 
 @media (width >= 1024px) {
-  .fontsize {
-    font-size: calc(.7813vw + 10px);
+  .breadcrumbs {
+    font-size: calc(0.7813vw + 10px);
   }
 }
 
 @media (width >= 1280px) {
-  .fontsize {
+  .breadcrumbs {
     font-size: 20px;
   }
 }
