--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -28,7 +28,7 @@ table {
   border-spacing: 0;
   color: rgb(0 0 0 / 60%);
   font-size: 16px;
-  font-family: var(--leu-font-regular);
+  font-family: var(--leu-font-family-regular);
   line-height: 1.5;
 }
 
@@ -41,7 +41,7 @@ th {
   text-align: left;
   font-size: 12px;
   font-weight: normal;
-  font-family: var(--leu-font-black);
+  font-family: var(--leu-font-family-black);
   background: var(--table-even-row-bg);
 }
 
