refactor(theme): rewrite font style generator as a postcss plugin

--- a/src/styles/custom-properties.css
+++ b/src/styles/custom-properties.css
@@ -1,3 +1,5 @@
+@import url("./custom-media.css");
+
 :root {
   --leu-color-black-100: #000;
   --leu-color-black-80: #333;
@@ -49,113 +51,5 @@
   --leu-box-shadow-regular: 0px 0px 16px var(--leu-color-black-transp-20);
   --leu-box-shadow-long: 0px 0px 80px var(--leu-color-black-transp-20);
 
-  /* Typography: Black styles */
-  --leu-t-30-black-font-size: 0.75rem;
-  --leu-t-30-black-line-height: 1.5;
-  --leu-t-30-black-spacing: 0.5625rem;
-  --leu-t-30-black-font: var(--leu-t-30-black-font-size) /
-    var(--leu-t-30-black-line-height);
-
-  --leu-t-35-black-font-size: 0.875rem;
-  --leu-t-35-black-line-height: 1.4;
-  --leu-t-35-black-spacing: 0.625rem;
-  --leu-t-35-black-font: var(--leu-t-35-black-font-size) /
-    var(--leu-t-35-black-line-height);
-
-  --leu-t-40-black-font-size: 1rem;
-  --leu-t-40-black-line-height: 1.5;
-  --leu-t-40-black-spacing: 0.75rem;
-  --leu-t-40-black-font: var(--leu-t-40-black-font-size) /
-    var(--leu-t-40-black-line-height);
-
-  --leu-t-45-black-font-size: 1.125rem;
-  --leu-t-45-black-line-height: 1.3;
-  --leu-t-45-black-spacing: 0.75rem;
-  --leu-t-45-black-font: var(--leu-t-45-black-font-size) /
-    var(--leu-t-45-black-line-height);
-
-  --leu-t-50-black-font-size: 1.25rem;
-  --leu-t-50-black-line-height: 1.3;
-  --leu-t-50-black-spacing: 0.8125rem;
-  --leu-t-50-black-font: var(--leu-t-50-black-font-size) /
-    var(--leu-t-50-black-line-height);
-
-  --leu-t-60-black-font-size: 1.5rem;
-  --leu-t-60-black-line-height: 1.3;
-  --leu-t-60-black-spacing: 0.9375rem;
-  --leu-t-60-black-font: var(--leu-t-60-black-font-size) /
-    var(--leu-t-60-black-line-height);
-
-  --leu-t-70-black-font-size: 1.75rem;
-  --leu-t-70-black-line-height: 1.2;
-  --leu-t-70-black-spacing: 1.0625rem;
-  --leu-t-70-black-font: var(--leu-t-70-black-font-size) /
-    var(--leu-t-70-black-line-height);
-
-  --leu-t-80-black-font-size: 2rem;
-  --leu-t-80-black-line-height: 1.2;
-  --leu-t-80-black-spacing: 1.1875rem;
-  --leu-t-80-black-font: var(--leu-t-80-black-font-size) /
-    var(--leu-t-80-black-line-height);
-
-  --leu-t-100-black-font-size: 2.5rem;
-  --leu-t-100-black-line-height: 1;
-  --leu-t-100-black-spacing: 1.5rem;
-  --leu-t-100-black-font: var(--leu-t-100-black-font-size) /
-    var(--leu-t-100-black-line-height);
-
-  --leu-t-120-black-font-size: 3rem;
-  --leu-t-120-black-line-height: 1;
-  --leu-t-120-black-spacing: 1.5rem;
-  --leu-t-120-black-font: var(--leu-t-120-black-font-size) /
-    var(--leu-t-120-black-line-height);
-
-  --leu-t-140-black-font-size: 3.5rem;
-  --leu-t-140-black-line-height: 1;
-  --leu-t-140-black-spacing: 1.75rem;
-  --leu-t-140-black-font: var(--leu-t-140-black-font-size) /
-    var(--leu-t-140-black-line-height);
-
-  --leu-t-180-black-font-size: 4.5rem;
-  --leu-t-180-black-line-height: 1;
-  --leu-t-180-black-spacing: 2.25rem;
-  --leu-t-180-black-font: var(--leu-t-180-black-font-size) /
-    var(--leu-t-180-black-line-height);
-
-  /* Typography: Regular styles */
-  --leu-t-30-regular-font-size: 0.75rem;
-  --leu-t-30-regular-line-height: 1.5;
-  --leu-t-30-regular-spacing: 0.5625rem;
-  --leu-t-30-regular-font: var(--leu-t-30-regular-font-size) /
-    var(--leu-t-30-regular-line-height);
-
-  --leu-t-35-regular-font-size: 0.875rem;
-  --leu-t-35-regular-line-height: 1.4;
-  --leu-t-35-regular-spacing: 0.625rem;
-  --leu-t-35-regular-font: var(--leu-t-35-regular-font-size) /
-    var(--leu-t-35-regular-line-height);
-
-  --leu-t-40-regular-font-size: 1rem;
-  --leu-t-40-regular-line-height: 1.5;
-  --leu-t-40-regular-spacing: 0.75rem;
-  --leu-t-40-regular-font: var(--leu-t-40-regular-font-size) /
-    var(--leu-t-40-regular-line-height);
-
-  --leu-t-45-regular-font-size: 1.125rem;
-  --leu-t-45-regular-line-height: 1.5;
-  --leu-t-45-regular-spacing: 0.8125rem;
-  --leu-t-45-regular-font: var(--leu-t-45-regular-font-size) /
-    var(--leu-t-45-regular-line-height);
-
-  --leu-t-50-regular-font-size: 1.25rem;
-  --leu-t-50-regular-line-height: 1.5;
-  --leu-t-50-regular-spacing: 0.9375rem;
-  --leu-t-50-regular-font: var(--leu-t-50-regular-font-size) /
-    var(--leu-t-50-regular-line-height);
-
-  --leu-t-60-regular-font-size: 1.5rem;
-  --leu-t-60-regular-line-height: 1.5;
-  --leu-t-60-regular-spacing: 1.125rem;
-  --leu-t-60-regular-font: var(--leu-t-60-regular-font-size) /
-    var(--leu-t-60-regular-line-height);
+  @leu-font-styles './font-definitions.json';
 }
