--- a/src/components/range-slider/range-slider.css
+++ b/src/components/range-slider/range-slider.css
@@ -1,179 +1,189 @@
 :host {
-    --slider-color: var(--leu-color-black-40);
-    --slider-color-disabled: var(--leu-color-black-20);
-    --slider-color-focus: var(--leu-color-func-cyan);
-  
-    --slider-track-background: var(--leu-color-black-10);
-    --slider-track-height: 4px;
-    --slider-track-radius: var(--slider-track-height);
+  --slider-color: var(--leu-color-black-40);
+  --slider-color-disabled: var(--leu-color-black-20);
+  --slider-color-focus: var(--leu-color-func-cyan);
 
-    --slider-track-value-color: var(--leu-color-func-cyan);
-    --slider-track-value-width: 0;
-    --slider-track-value-min: 0;
+  --slider-track-background: var(--leu-color-black-10);
+  --slider-track-height: 4px;
+  --slider-track-radius: var(--slider-track-height);
 
-    --slider-thumb-color: var(--leu-color-black-0);
-    --slider-thumb-border-color: var(--slider-color);
-    --slider-thumb-hover-border-color: var(--leu-color-black-100);
-    --slider-thumb-diameter: 32px;
-    --slider-thumb-border-size: 2px;
-    --slider-thumb-diameter-with-border: calc(var(--slider-thumb-diameter) + 2 * var(--slider-thumb-border-size));
-    --slider-from-thumb-offset: 0;
-    --slider-from-value-offset: 0;
-    --slider-to-thumb-offset: 0;
-    --slider-to-value-offset: 0;
-    --slider-from-z-index:1;
-    --slider-to-z-index:0;
-  
-    --slider-value-color: var(--leu-color-black-100);
-    --slider-value-color-disabled: var(--slider-color-disabled);
-  
-    --slider-font-regular: var(--leu-font-family-regular);
-    --slider-font-black: var(--leu-font-family-black);
-  
-    display: block;
-    box-sizing: border-box;
+  --slider-track-value-color: var(--leu-color-func-cyan);
+  --slider-track-value-width: 0;
+  --slider-track-value-min: 0;
 
-    font-family: var(--slider-font-regular);
-  }
-  
-  .slider-container {
-    position: relative;
-    width: 100%;
-    height: var(--slider-thumb-diameter-with-border);
-  }
+  --slider-thumb-color: var(--leu-color-black-0);
+  --slider-thumb-border-color: var(--slider-color);
+  --slider-thumb-hover-border-color: var(--leu-color-black-100);
+  --slider-thumb-diameter: 32px;
+  --slider-thumb-border-size: 2px;
+  --slider-thumb-diameter-with-border: calc(
+    var(--slider-thumb-diameter) + 2 * var(--slider-thumb-border-size)
+  );
+  --slider-from-thumb-offset: 0;
+  --slider-from-value-offset: 0;
+  --slider-to-thumb-offset: 0;
+  --slider-to-value-offset: 0;
+  --slider-from-z-index: 1;
+  --slider-to-z-index: 0;
 
-  .slider-track,
-  .slider-track-value {
-    border-radius: var(--slider-track-radius);
-    height: var(--slider-track-height);
-    max-height: var(--slider-thumb-diameter-with-border);
-    position: absolute;
-    top: calc((var(--slider-thumb-diameter-with-border) - min(var(--slider-track-height), var(--slider-thumb-diameter-with-border))) / 2);
-  }
+  --slider-value-color: var(--leu-color-black-100);
+  --slider-value-color-disabled: var(--slider-color-disabled);
 
-  .slider-track {
-    background: var(--slider-track-background);
-    width: 100%;
-  }
+  --slider-font-regular: var(--leu-font-family-regular);
+  --slider-font-black: var(--leu-font-family-black);
 
-  .slider-track-value {
-    background: var(--slider-track-value-color);
-    width: var(--slider-track-value-width);
-    left: var(--slider-track-value-min);
-  }
+  display: block;
+  box-sizing: border-box;
 
-  .slider-from-thumb,
-  .slider-to-thumb {
-    background: var(--slider-thumb-color);
-    border: 2px var(--slider-thumb-border-color) solid;
-    border-radius: 50%;
-    height: var(--slider-thumb-diameter);
-    position: absolute;
-    width: var(--slider-thumb-diameter);
-    top:0;
-    pointer-events:none;
-  }
+  font-family: var(--slider-font-regular);
+}
 
-  .slider-from-thumb {
-    transform: translateX(var(--slider-from-thumb-offset));
-  }
+.slider-container {
+  position: relative;
+  width: 100%;
+  height: var(--slider-thumb-diameter-with-border);
+}
 
-  .slider-to-thumb {
-    transform: translateX(var(--slider-to-thumb-offset));
-  }
+.slider-track,
+.slider-track-value {
+  border-radius: var(--slider-track-radius);
+  height: var(--slider-track-height);
+  max-height: var(--slider-thumb-diameter-with-border);
+  position: absolute;
+  top: calc(
+    (
+        var(--slider-thumb-diameter-with-border) -
+          min(
+            var(--slider-track-height),
+            var(--slider-thumb-diameter-with-border)
+          )
+      ) / 2
+  );
+}
 
-  .slider-from-thumb[disabled],
-  .slider-to-thumb[disabled] {
-    border: 2px var(--slider-color-disabled) solid;
-  }
+.slider-track {
+  background: var(--slider-track-background);
+  width: 100%;
+}
 
-  .slider-from-value,
-  .slider-to-value {
-    display: inline-block;
-    text-align: center;
-    font-family: var(--slider-font-black);
-    font-size: 12px;
-    color: var(--slider-value-color);
-    line-height: 18px;
-  }
+.slider-track-value {
+  background: var(--slider-track-value-color);
+  width: var(--slider-track-value-width);
+  left: var(--slider-track-value-min);
+}
 
-  .slider-from-value {
-    transform: translateX(var(--slider-from-value-offset));
-  }
+.slider-from-thumb,
+.slider-to-thumb {
+  background: var(--slider-thumb-color);
+  border: 2px var(--slider-thumb-border-color) solid;
+  border-radius: 50%;
+  height: var(--slider-thumb-diameter);
+  position: absolute;
+  width: var(--slider-thumb-diameter);
+  top: 0;
+  pointer-events: none;
+}
 
-  .slider-to-value {
-    transform: translateX(var(--slider-to-value-offset));
- }
+.slider-from-thumb {
+  transform: translateX(var(--slider-from-thumb-offset));
+}
 
- .slider-from-value[disabled],
- .slider-to-value[disabled] {
+.slider-to-thumb {
+  transform: translateX(var(--slider-to-thumb-offset));
+}
+
+.slider-from-thumb[disabled],
+.slider-to-thumb[disabled] {
+  border: 2px var(--slider-color-disabled) solid;
+}
+
+.slider-from-value,
+.slider-to-value {
+  display: inline-block;
+  text-align: center;
+  font-family: var(--slider-font-black);
+  font-size: 12px;
+  color: var(--slider-value-color);
+  line-height: 18px;
+}
+
+.slider-from-value {
+  transform: translateX(var(--slider-from-value-offset));
+}
+
+.slider-to-value {
+  transform: translateX(var(--slider-to-value-offset));
+}
+
+.slider-from-value[disabled],
+.slider-to-value[disabled] {
   color: var(--slider-color-disabled);
- }
+}
 
-  .slider-from-value-track {
-    text-align: center;
-    height: 22px;
-  }
+.slider-from-value-track {
+  text-align: center;
+  height: 22px;
+}
 
-  .slider-to-value-track {
-    text-align: center;
-    height: 0;
-    transform: translateY(-22px);
-  }
+.slider-to-value-track {
+  text-align: center;
+  height: 0;
+  transform: translateY(-22px);
+}
 
-  input[type="range"]::-moz-range-thumb {
-    appearance: none;
-    pointer-events: all;
-    width: var(--slider-thumb-diameter-with-border);
-    height: var(--slider-thumb-diameter-with-border);
-    border-radius: 50%;
-  }
+input[type="range"]::-moz-range-thumb {
+  appearance: none;
+  pointer-events: all;
+  width: var(--slider-thumb-diameter-with-border);
+  height: var(--slider-thumb-diameter-with-border);
+  border-radius: 50%;
+}
 
-  input[type="range"]::-webkit-slider-thumb {
-    appearance: none;
-    pointer-events: all;
-    width: var(--slider-thumb-diameter-with-border);
-    height: var(--slider-thumb-diameter-with-border);
-    border-radius: 50%;
-  }
+input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  pointer-events: all;
+  width: var(--slider-thumb-diameter-with-border);
+  height: var(--slider-thumb-diameter-with-border);
+  border-radius: 50%;
+}
 
-  input[type="range"] { 
-    appearance: none;
-    display: inline-block;
-    height: var(--slider-thumb-diameter-with-border);
-    margin: 0;
-    opacity: 0;
-    position: absolute;
-    width: 100%;
-    cursor: pointer;
-    pointer-events: none;
-  }
+input[type="range"] {
+  appearance: none;
+  display: inline-block;
+  height: var(--slider-thumb-diameter-with-border);
+  margin: 0;
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  cursor: pointer;
+  pointer-events: none;
+}
 
-  .slider-container:hover > .slider-from-thumb, 
-  .slider-container:hover > .slider-to-thumb {
-    --slider-thumb-border-color: var(--slider-thumb-hover-border-color);
-  }
+.slider-container:hover > .slider-from-thumb,
+.slider-container:hover > .slider-to-thumb {
+  --slider-thumb-border-color: var(--slider-thumb-hover-border-color);
+}
 
-  :host([disabled]) {
-    --slider-track-background: var(--slider-color-disabled);
-    --slider-track-value-color: var(--slider-color-disabled);
-    --slider-thumb-border-color: var(--slider-color-disabled);
-    --slider-thumb-hover-border-color: var(--slider-color-disabled);
-    --slider-value-color: var(--slider-value-color-disabled);
-  }
-  
-  #from-slider {
-    z-index: calc(var(--slider-from-z-index) + 10);
-  }
+:host([disabled]) {
+  --slider-track-background: var(--slider-color-disabled);
+  --slider-track-value-color: var(--slider-color-disabled);
+  --slider-thumb-border-color: var(--slider-color-disabled);
+  --slider-thumb-hover-border-color: var(--slider-color-disabled);
+  --slider-value-color: var(--slider-value-color-disabled);
+}
 
-  #to-slider {
-    z-index: calc(var(--slider-to-z-index) + 10);
-  }
+#from-slider {
+  z-index: calc(var(--slider-from-z-index) + 10);
+}
 
-  #from-slider-thumb {
-    z-index: var(--slider-from-z-index);
-  }
+#to-slider {
+  z-index: calc(var(--slider-to-z-index) + 10);
+}
 
-  #to-slider-thumb {
-    z-index: var(--slider-to-z-index);
-  }
+#from-slider-thumb {
+  z-index: var(--slider-from-z-index);
+}
+
+#to-slider-thumb {
+  z-index: var(--slider-to-z-index);
+}
