--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -15,9 +15,6 @@
   --slider-thumb-hover-border-color: var(--leu-color-black-100);
   --slider-thumb-diameter: 32px;
   --slider-thumb-border-size: 2px;
-  --slider-thumb-diameter-with-border: calc(
-    var(--slider-thumb-diameter) + 2 * var(--slider-thumb-border-size)
-  );
   --slider-thumb-offset: 0;
   --slider-value-offset: 0;
 
@@ -36,7 +33,7 @@
 .slider-container {
   position: relative;
   width: 100%;
-  height: var(--slider-thumb-diameter-with-border);
+  height: var(--slider-thumb-diameter);
 }
 
 .label {
@@ -48,17 +45,9 @@
 .slider-track-value {
   border-radius: var(--slider-track-radius);
   height: var(--slider-track-height);
-  max-height: var(--slider-thumb-diameter-with-border);
+  max-height: var(--slider-thumb-diameter);
   position: absolute;
-  top: calc(
-    (
-        var(--slider-thumb-diameter-with-border) -
-          min(
-            var(--slider-track-height),
-            var(--slider-thumb-diameter-with-border)
-          )
-      ) / 2
-  );
+  top: calc((var(--slider-thumb-diameter) - var(--slider-track-height)) / 2);
 }
 
 .slider-track {
@@ -72,6 +61,7 @@
 }
 
 .slider-thumb {
+  box-sizing: border-box;
   background: var(--slider-thumb-color);
   border: 2px var(--slider-thumb-border-color) solid;
   border-radius: 50%;
@@ -94,11 +84,13 @@
 .slider-value-track {
   text-align: center;
   height: 22px;
+  margin-top: 0.75rem;
+  padding-bottom: 0.25rem;
 }
 
 .input {
   display: inline-block;
-  height: var(--slider-thumb-diameter-with-border);
+  height: var(--slider-thumb-diameter);
   margin: 0;
   opacity: 0;
   position: relative;
