Revert "refactor: move css from header to breadcrumb"
This reverts commit f11d8bf10bfa0ae41f2d0d81fffe821c2988e43f.

--- a/src/components/breadcrumb/breadcrumb.css
+++ b/src/components/breadcrumb/breadcrumb.css
@@ -57,8 +57,16 @@
   margin-right: 0.25rem;
 }
 
-ol:not(.hidden) li:first-child svg {
-  margin-left: -24px;
+@media (width <= 340px) {
+  ol:not(.hidden) li:not(:first-child) {
+    display: none;
+  }
+}
+
+@media (width > 340px) {
+  ol:not(.hidden) li:first-child {
+    display: none;
+  }
 }
 
 .menu {
